--- a/MemoRxSwift/View/Base.lproj/Main.storyboard
+++ b/MemoRxSwift/View/Base.lproj/Main.storyboard
@@ -22,7 +22,94 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="141" y="139"/>
+            <point key="canvasLocation" x="-759" y="-135"/>
+        </scene>
+        <!--New Memo-->
+        <scene sceneID="c4Z-Px-czh">
+            <objects>
+                <viewController id="yy8-if-4SY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q6D-v7-ZpX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ABl-8F-onf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="New Memo" id="VNI-9p-fdS"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BxX-Xd-Kx6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1976.8115942028987" y="-381.02678571428572"/>
+        </scene>
+        <!--Memo List-->
+        <scene sceneID="44c-mA-Yti">
+            <objects>
+                <viewController id="3n9-W0-Kcj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lFM-kF-b2v">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ehL-VM-AB7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Memo List" id="9hK-FM-heW"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="skL-MD-LAa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1068.1159420289855" y="312.72321428571428"/>
+        </scene>
+        <!--Memo View-->
+        <scene sceneID="fnd-cO-jgF">
+            <objects>
+                <viewController storyboardIdentifier="DetailVC" id="nYD-uQ-tzh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dS1-P5-iub">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="F6o-ri-Lsc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Memo View" id="NNg-zd-Xij"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Odg-Jf-dDC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1846" y="308"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="O1B-8e-04B">
+            <objects>
+                <navigationController storyboardIdentifier="ListNavigation" automaticallyAdjustsScrollViewInsets="NO" id="w9l-F2-K5N" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="btC-En-sp3">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3n9-W0-Kcj" kind="relationship" relationship="rootViewController" id="qYE-oj-agI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wRM-bS-6wh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="157.97101449275362" y="312.72321428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0ky-pV-X1n">
+            <objects>
+                <navigationController storyboardIdentifier="ComposeNavigation" automaticallyAdjustsScrollViewInsets="NO" id="4Dd-ID-3nz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="ebI-Bp-sfN">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="yy8-if-4SY" kind="relationship" relationship="rootViewController" id="5rU-Sn-2QA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6vt-jf-3CJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1066.6666666666667" y="-381.02678571428572"/>
         </scene>
     </scenes>
     <resources>
