--- a/MemoRxSwift/ViewController/Base.lproj/Main.storyboard
+++ b/MemoRxSwift/ViewController/Base.lproj/Main.storyboard
@@ -48,11 +48,48 @@
                     <view key="view" contentMode="scaleToFill" id="lFM-kF-b2v">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q4M-oo-kgL">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MemoCell" textLabel="O6H-LS-QFd" style="IBUITableViewCellStyleDefault" id="jqO-Y9-LEd">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jqO-Y9-LEd" id="zas-2t-UbY">
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O6H-LS-QFd">
+                                                    <rect key="frame" x="20" y="0.0" width="355" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ehL-VM-AB7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="q4M-oo-kgL" firstAttribute="leading" secondItem="ehL-VM-AB7" secondAttribute="leading" id="Ik9-NR-taI"/>
+                            <constraint firstItem="ehL-VM-AB7" firstAttribute="bottom" secondItem="q4M-oo-kgL" secondAttribute="bottom" id="fYi-8t-IlX"/>
+                            <constraint firstItem="q4M-oo-kgL" firstAttribute="top" secondItem="ehL-VM-AB7" secondAttribute="top" id="fgt-nk-are"/>
+                            <constraint firstItem="ehL-VM-AB7" firstAttribute="trailing" secondItem="q4M-oo-kgL" secondAttribute="trailing" id="gg5-SG-fCD"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Memo List" id="9hK-FM-heW"/>
+                    <navigationItem key="navigationItem" title="Memo List" id="9hK-FM-heW">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ELD-eL-5hh"/>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="addButton" destination="ELD-eL-5hh" id="vpQ-QU-Ai5"/>
+                        <outlet property="listTableView" destination="q4M-oo-kgL" id="YMf-4o-ThR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="skL-MD-LAa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
